Arts: Rename to Lineage
Change-Id: I75f0e6b9918c452f2c42e2814e96dbd243df067e
Signed-off-by: Aditya Eka Pranata <aepranata@gmail.com>

--- a/res/values/wallpaper_strings.xml
+++ b/res/values/wallpaper_strings.xml
@@ -15,7 +15,7 @@
     limitations under the License.
 -->
 <resources>
-    <string name="category_paii_lineage">Paii's Lineage</string>
+    <string name="category_paii_lineage">Lineage</string>
     <string name="author_paii">by Paii</string>
     <string name="wallpaper_paii_lineage_01">Lineage 01</string>
     <string name="wallpaper_paii_lineage_02">Lineage 02</string>
