--- a/res/values/wallpaper_strings.xml
+++ b/res/values/wallpaper_strings.xml
@@ -23,6 +23,9 @@
     <string name="wallpaper_afterlife_paii_04">Paii · 04</string>
     <string name="wallpaper_afterlife_paii_05">Paii · 05</string>
     <string name="wallpaper_afterlife_paii_06">Paii · 06</string>
+    <string name="wallpaper_afterlife_paii_07">Paii · 07</string>
+    <string name="wallpaper_afterlife_paii_08">Paii · 08</string>
+    <string name="wallpaper_afterlife_paii_09">Paii · 09</string>
     <string name="category_lineage">Lineage</string>
     <string name="wallpaper_lineage_paii_01">Paii · 01</string>
     <string name="wallpaper_lineage_paii_02">Paii · 02</string>
@@ -33,4 +36,9 @@
     <string name="wallpaper_lineage_paii_07">Paii · 07</string>
     <string name="wallpaper_lineage_paii_08">Paii · 08</string>
     <string name="wallpaper_lineage_paii_09">Paii · 09</string>
+    <string name="wallpaper_lineage_paii_10">Paii · 10</string>
+    <string name="wallpaper_lineage_paii_11">Paii · 11</string>
+    <string name="wallpaper_lineage_paii_12">Paii · 12</string>
+    <string name="wallpaper_lineage_paii_13">Paii · 13</string>
+    <string name="wallpaper_lineage_paii_14">Paii · 14</string>
 </resources>
