Arts: Rework Lineage
Change-Id: Id7ccee622ddf1ebbd8cea9ec42869100a2502868
Signed-off-by: Aditya Eka Pranata <aepranata@gmail.com>

--- a/res/values/wallpaper_strings.xml
+++ b/res/values/wallpaper_strings.xml
@@ -27,18 +27,23 @@
     <string name="wallpaper_afterlife_paii_08">Paii · 08</string>
     <string name="wallpaper_afterlife_paii_09">Paii · 09</string>
     <string name="category_lineage">Lineage</string>
-    <string name="wallpaper_lineage_paii_01">Paii · 01</string>
-    <string name="wallpaper_lineage_paii_02">Paii · 02</string>
-    <string name="wallpaper_lineage_paii_03">Paii · 03</string>
-    <string name="wallpaper_lineage_paii_04">Paii · 04</string>
-    <string name="wallpaper_lineage_paii_05">Paii · 05</string>
-    <string name="wallpaper_lineage_paii_06">Paii · 06</string>
-    <string name="wallpaper_lineage_paii_07">Paii · 07</string>
-    <string name="wallpaper_lineage_paii_08">Paii · 08</string>
-    <string name="wallpaper_lineage_paii_09">Paii · 09</string>
-    <string name="wallpaper_lineage_paii_10">Paii · 10</string>
-    <string name="wallpaper_lineage_paii_11">Paii · 11</string>
-    <string name="wallpaper_lineage_paii_12">Paii · 12</string>
-    <string name="wallpaper_lineage_paii_13">Paii · 13</string>
-    <string name="wallpaper_lineage_paii_14">Paii · 14</string>
+    <string name="wallpaper_lineage_abstract_01">Abstract · 01</string>
+    <string name="wallpaper_lineage_abstract_02">Abstract · 02</string>
+    <string name="wallpaper_lineage_abstract_03">Abstract · 03</string>
+    <string name="wallpaper_lineage_abstract_04">Abstract · 04</string>
+    <string name="wallpaper_lineage_abstract_05">Abstract · 05</string>
+    <string name="wallpaper_lineage_abstract_06">Abstract · 06</string>
+    <string name="wallpaper_lineage_anime_01">Anime · 01</string>
+    <string name="wallpaper_lineage_anime_02">Anime · 02</string>
+    <string name="wallpaper_lineage_anime_03">Anime · 03</string>
+    <string name="wallpaper_lineage_anime_04">Anime · 04</string>
+    <string name="wallpaper_lineage_anime_05">Anime · 05</string>
+    <string name="wallpaper_lineage_anime_06">Anime · 06</string>
+    <string name="wallpaper_lineage_anime_07">Anime · 07</string>
+    <string name="wallpaper_lineage_anime_08">Anime · 08</string>
+    <string name="wallpaper_lineage_anime_09">Anime · 09</string>
+    <string name="wallpaper_lineage_anime_10">Anime · 10</string>
+    <string name="wallpaper_lineage_cartoon_01">Cartoon · 01</string>
+    <string name="wallpaper_lineage_cartoon_02">Cartoon · 02</string>
+    <string name="wallpaper_lineage_cartoon_03">Cartoon · 03</string>
 </resources>
